Corrected the Appointment/Meeting Service